--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -188,3 +188,13 @@ aside #property_text_area {
 #summary table, #summary td, #summary th, #summary tr {
   border:1px solid black;
 }
+
+#counter-div {
+  text-align: center;
+  padding: 10px;
+  max-width:700px;
+}
+
+#counter-div img {
+  margin: auto;
+}
