Improved text button and response from back-end for disambiguation preview

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -46,15 +46,15 @@
             <hr>
             <button title="Preview the removal of previously detected ambiguities from the FTS"
               class="command operation" id="disambiguate" type="button" disabled>
-              Remove all ambiguities
+              PREVIEW: Remove all ambiguities
             </button>
             <button title="Preview the removal of false optional transitions from the FTS"
               class="command operation" id="fopt" type="button" disabled>
-              Remove false optional transitions
+              PREVIEW: Remove false optional transitions
             </button>
             <button title="Preview the removal of dead transitions and hidden deadlock states from the FTS"
               class="command operation" id="hdd" type="button" disabled>
-              Remove dead transitions and hidden deadlock states
+              PREVIEW: Remove dead transitions and hidden deadlock states
             </button>
             <button title="Update the FTS source code applying the last disambiguation operation performed"
               class="command operation" id="apply" type="button" disabled>
