--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -76,7 +76,7 @@
             </button>
             <button title="Verify a property expressed as a v-ACTL formula using VMC"
               class="command operation" id="verify_properties" type="button" disabled>Verify property</button>
-            <textarea disabled id="property_text_area" name="property_text_area" rows="20" cols="50" placeholder="Insert an v-ACTL formula to verify"></textarea>
+            <textarea disabled id="property_text_area" name="property_text_area" rows="20" cols="50" placeholder="Insert a v-ACTL formula to verify"></textarea>
             <button title="Shows a counterexample explaining why the given formula is false for the current MTS"
               class="command operation" id="show_explanation" type="button" disabled>Show explanation</button>
         </aside>
